Adjusted the buttons padding on smalled screens to prevent line-breaking issue

--- a/src/_styles/core/buttons.scss
+++ b/src/_styles/core/buttons.scss
@@ -15,7 +15,7 @@
   background-color: transparent;
   border: $btn-border-width solid transparent;
   font-size: 18px;
-  padding: 19px 80px;
+  padding: 19px 70px;
   border-radius: 90px;
   @include transition($btn-transition);
   @include hover {
